MWPW-147023 fix css styles of project up a bit with a focus on making the old unwrapBlock call for the banner, promotion & template-list unnecessary

--- a/express/blocks/faq/faq.css
+++ b/express/blocks/faq/faq.css
@@ -1,28 +1,28 @@
-main .section:has(.faq) {
+.section:has(.faq) {
   background-color: var(--color-gray-200);
   padding: 80px 0;
 }
 
-main .section:has(.faq) > div {
+.section:has(.faq) > div {
   margin: auto;
   padding: 0 24px;
   max-width: 375px;
 }
 
-main .section:has(.faq) > div > h2 {
+.section:has(.faq) > div > h2 {
   margin-top: 0;
   margin-bottom: 40px;
 }
 
-main .section:has(.faq) h3 {
+.section:has(.faq) h3 {
   margin: 0;
 }
 
-main .faq {
+.faq {
   text-align: left;
 }
 
-main .faq .faq-accordion {
+.faq .faq-accordion {
   position: relative;
   height: auto;
   margin-top: 8px;
@@ -31,7 +31,7 @@ main .faq .faq-accordion {
   background-color: var(--color-white);
 }
 
-main .faq .faq-question {
+.faq .faq-question {
   display: block;
   padding: 0 0 24px 0;
   text-decoration: none;
@@ -44,22 +44,22 @@ main .faq .faq-question {
   overflow-anchor: none;
 }
 
-main .faq .faq-answer {
+.faq .faq-answer {
   padding: 0;
   display: block;
   font-size: var(--body-font-size-m);
   line-height: var(--body-line-height);
 }
 
-main .faq .faq-answer ul {
+.faq .faq-answer ul {
   margin: 0 0 8px 0;
 }
 
-main .faq .faq-answer ul li {
+.faq .faq-answer ul li {
   list-style: disc;
 }
 
-main .faq .faq-answer p {
+.faq .faq-answer p {
   font-size: var(--body-font-size-m);
   line-height: 24px;
   font-weight: 400;
@@ -67,23 +67,23 @@ main .faq .faq-answer p {
 }
 
 @media (min-width: 900px) {
-  main .section:has(.faq) > div {
+  .section:has(.faq) > div {
     padding: 0 56px;
     max-width: 830px;
   }
 
-  main .section:has(.faq) > div > h2 {
+  .section:has(.faq) > div > h2 {
     margin-bottom: 80px;
   }
 
-  main .faq .faq-question {
+  .faq .faq-question {
     font-size: var(--body-font-size-xxl);
     line-height: 36px;
   }
 }
 
 @media (min-width: 1200px) {
-  main .section:has(.faq) > div {
+  .section:has(.faq) > div {
     max-width: 1024px;
   }
 }
