--- a/express/blocks/link-list/link-list.css
+++ b/express/blocks/link-list/link-list.css
@@ -1,15 +1,12 @@
-main .section > div.link-list-wrapper {
+.link-list-wrapper {
   padding-left: 0;
   padding-right: 0;
   padding-top: 60px;
-}
-
-main .section:has( .link-list) > div,
-main .section:has( .link-list.centered) > div {
   max-width: 1200px;
+  margin: auto;
 }
 
-main .link-list {
+.link-list {
   display: block;
   overflow: hidden;
   margin: 40px auto;
@@ -17,128 +14,118 @@ main .link-list {
   text-align: left;
 }
 
-main .link-list.centered {
+.link-list.centered {
   box-sizing: border-box;
   max-width: 92%;
   width: max-content;
 }
 
-main .link-list.shaded {
+.link-list.shaded {
   margin-top: 8px;
   margin-bottom: 24px;
   background-color: #EDEDED;
   border-radius: 100px;
 }
 
-main .link-list h2,
-main .link-list h3,
-main .link-list h4 {
+.link-list h2,
+.link-list h3,
+.link-list h4 {
   text-align: left;
   padding-left: 32px;
 }
 
-main .link-list h3 {
+.link-list h3 {
   font-size: var(--heading-font-size-m);
   margin-bottom: 20px;
   margin-top: 0;
 }
 
-main .link-list p.button-container {
+.link-list p.button-container {
   margin: 0 10px;
   line-height: 0;
 }
 
-main .link-list a.button.secondary {
+.link-list a.button.secondary {
   margin: 6px 0;
 }
 
-/* Remove max-width on mobile breakpoints */
-main .section:has( .link-list),
-main .section:has( .link-list) > div,
-main .section:has( .link-list) .link-list,
-main .section:has( .link-list) .link-list > div {
-  max-width: none;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-main .link-list .carousel-container {
+.link-list .carousel-container {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
 }
 
-main .link-list.shaded .carousel-container .carousel-platform {
+.link-list.shaded .carousel-container .carousel-platform {
   padding: 4px;
 }
 
-main .link-list.centered .carousel-container .carousel-platform {
+.link-list.centered .carousel-container .carousel-platform {
   box-sizing: border-box;
 }
-main .link-list .carousel-platform {
+.link-list .carousel-platform {
   scroll-padding: 32px;
 }
 
-main .link-list .carousel-platform p.button-container:first-child {
+.link-list .carousel-platform p.button-container:first-child {
   margin-left: 32px;
 }
 
-main .link-list.centered .carousel-platform p.button-container:first-child {
+.link-list.centered .carousel-platform p.button-container:first-child {
   margin-left: unset;
 }
 
 /* fullwidth variant */
 
-main .section.link-list-fullwidth-container > div.link-list-wrapper {
+.link-list-fullwidth-container > div.link-list-wrapper {
   box-sizing: border-box;
   width: fit-content;
   max-width: 100%;
 }
 
-main .section.link-list-fullwidth-container > div.link-list-wrapper .link-list,
-main .section.link-list-fullwidth-container > div.link-list-wrapper .link-list h2,
-main .section.link-list-fullwidth-container > div.link-list-wrapper .link-list h3,
-main .section.link-list-fullwidth-container > div.link-list-wrapper .link-list h4 {
+.link-list-fullwidth-container > div.link-list-wrapper .link-list,
+.link-list-fullwidth-container > div.link-list-wrapper .link-list h2,
+.link-list-fullwidth-container > div.link-list-wrapper .link-list h3,
+.link-list-fullwidth-container > div.link-list-wrapper .link-list h4 {
   text-align: center;
 }
 
-main .section.link-list-fullwidth-container > div.link-list-wrapper .link-list .carousel-platform {
+.link-list-fullwidth-container > div.link-list-wrapper .link-list .carousel-platform {
   margin-left: auto;
   margin-right: auto;
 }
 
-main .hero-animation-wrapper + .link-list-wrapper .link-list {
+.hero-animation-wrapper + .link-list-wrapper .link-list {
   margin-top: 16px;
 }
 
-main .link-list-wrapper .link-list.noarrows {
+.link-list-wrapper .link-list.noarrows {
   margin-top: 0;
 }
 
-main .link-list-wrapper .link-list.noarrows > div > div > p:first-of-type {
+.link-list-wrapper .link-list.noarrows > div > div > p:first-of-type {
   font-weight: 800;
   font-size: 16px;
   margin: 0 12px 4px 12px;
 }
 
-main .link-list-wrapper .link-list.noarrows .carousel-fader-right,
-main .link-list-wrapper .link-list.noarrows .carousel-fader-left {
+.link-list-wrapper .link-list.noarrows .carousel-fader-right,
+.link-list-wrapper .link-list.noarrows .carousel-fader-left {
   display: none;
 }
 
-main .link-list-wrapper .link-list.noarrows p.button-container {
+.link-list-wrapper .link-list.noarrows p.button-container {
   margin: 0 8px;
 }
 
-main .link-list-wrapper .link-list.noarrows p.button-container .button.medium.secondary {
+.link-list-wrapper .link-list.noarrows p.button-container .button.medium.secondary {
   padding: 3px 14px;
 }
 
-main .link-list.shaded p.button-container {
+.link-list.shaded p.button-container {
   margin: 0 2px;
 }
 
-main .link-list.shaded p.button-container .button {
+.link-list.shaded p.button-container .button {
   margin: 0;
   padding: 2px 16px;
   background-color: transparent;
@@ -146,66 +133,64 @@ main .link-list.shaded p.button-container .button {
   border: none;
 }
 
-main .link-list.shaded p.button-container .button:hover,
-main .link-list.shaded p.button-container.active .button {
+.link-list.shaded p.button-container .button:hover,
+.link-list.shaded p.button-container.active .button {
   background-color: var(--color-white);
 }
 
 /* fullwidth + leftalign variant */
 
-main .section.link-list-fullwidth-leftalign-container {
+.link-list-fullwidth-leftalign-container {
   padding-top: 0;
 }
 
-main .section.link-list-fullwidth-leftalign-container > div.link-list-wrapper {
+.link-list-fullwidth-leftalign-container > div.link-list-wrapper {
   margin-left: 0;
 }
 
-main .section.link-list-fullwidth-leftalign-container ~ .section {
+.link-list-fullwidth-leftalign-container ~ .section {
   padding-top: 0;
 }
 
-main .link-list.large p.button-container .button {
+.link-list.large p.button-container .button {
   padding: 12px 24px;
   border-radius: 24px;
 }
 
 @media (min-width: 900px) {
-  main .section:has( .link-list) > div,
-  main .section:has( .link-list.centered) > div {
+  .link-list-wrapper {
     padding-left: 50px;
     padding-right: 50px;
   }
 
-  main .link-list {
+  .link-list {
     text-align: left;
   }
 
-  main .link-list h2,
-  main .link-list h3,
-  main .link-list h4 {
+  .link-list h2,
+  .link-list h3,
+  .link-list h4 {
     text-align: left;
   }
 
-  main .link-list .carousel-platform {
+  .link-list .carousel-platform {
     scroll-padding: 0;
   }
 
-  main .section.link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list,
-  main .section.link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list h2,
-  main .section.link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list h3,
-  main .section.link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list h4 {
+  .link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list,
+  .link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list h2,
+  .link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list h3,
+  .link-list-fullwidth-leftalign-container > div.link-list-wrapper .link-list h4 {
     padding-left: 0;
   }
 
-  main .section.link-list-fullwidth-leftalign-container .link-list .carousel-platform p.button-container:first-child {
+  .link-list-fullwidth-leftalign-container .link-list .carousel-platform p.button-container:first-child {
     margin-left: 10px;
   }
 }
 
 @media (min-width: 1200px) {
-  main .section:has( .link-list) > div,
-  main .section:has( .link-list.centered) > div {
+  .link-list-wrapper {
     padding-left: 55px;
     padding-right: 55px;
     max-width: 1200px;
